--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </style>
 </head>
 <body>
-    <canvas id="myCanvas" width="600px" height="600px"></canvas>
-    <script src="js/app.js"></script>
+    <canvas id="myCanvas" width="530px" height="530px"></canvas>
+    <script type="module" src="js/app.js"></script>
 </body>
 </html>
